# FlooNoC

./: .gitignore  .gitlab-ci.yml  .iis_env  404.html  Bender.yml  CHANGELOG.md  CITATION.cff  LICENSE-APACHE  Makefile  README.md  README_mcast  REUSE.toml  floo_noc.core  gmon.out  index.html  justfile  mesh.do  mkdocs.yml  multiaddr_decode.sv  objects.inv  pyproject.toml  renovate.json5  requirements.txt  sitemap.xml  wave_r1e4.do  zensical.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  floogen.yml  gitlab-ci.yml  lint.yml  publish-docs.yml  release.yml  slang.yml
Apache-License/: index.html
CONTRIBUTING/: index.html
SHL-License/: index.html
changelog/: index.html
docs/: CONTRIBUTING.md  SHL-License.md  floogen.md  getting_started.md  gs.md  index.md  license.md  repository_structure.md  routing.md
docs/floogen/: changelog.md  cli.md  connections.md  endpoints.md  installation.md  known_issues.md  minimal_example.md  network_types.md  overview.md  protocols.md  routers.md  routing.md  utils.md
docs/floonoc/: changelog.md  chimneys.md  getting_started.md  overview.md  route_algos.md  routers.md
docs/hw/: chimneys.md  commons.md  flits.md  getting_started.md  links.md  overview.md  route_algos.md  routers.md  vips.md
docs/integration/: integration.md
docs/stylesheets/: extra.css
floogen/: cli.py  config_parser.py  floo_gen.py  floo_gen_venv.sh  index.html  query.py  utils.py
floogen/cli/: index.html
floogen/connections/: index.html
floogen/endpoints/: index.html
floogen/examples/: astral.yml  axi_mesh_id.yml  axi_mesh_src.yml  axi_mesh_xy.yml  axi_mesh_yx.yml  axi_pkg.yml  collective.yml  dual_cluster_mesh.yml  mcast.yml  narrow_wide_pkg.yml  nw_mesh_id.yml  nw_mesh_src.yml  nw_mesh_xy.yml  nw_mesh_yx.yml  occamy_mesh.yml  occamy_mesh_src.yml  occamy_mesh_xy.yml  occamy_tree.yml  single_cluster.yml  terapool.yml  vc_axi_pkg.yml  vc_narrow_wide_pkg.yml
floogen/known_issues/: index.html
floogen/model/: __init__.py  connection.py  endpoint.py  (+8 more)
getting_started/: index.html
hw/: axi_mcast_demux_id_counters.sv  floo_alu.sv  floo_axi_chimney.sv  floo_axi_pkg.sv  floo_axi_router.sv  floo_cdc.sv  floo_cut.sv  floo_fifo.sv  floo_gen_path_mask.sv  floo_id_translation.sv  floo_mask_decode.sv  floo_mask_extract.sv  floo_mask_translation.sv  floo_mesh.sv  floo_mesh_ruche.sv  floo_meta_buffer.sv  floo_narrow_wide_chimney.sv  floo_narrow_wide_chimney_cr.sv  floo_narrow_wide_join.sv  floo_narrow_wide_pkg.sv  floo_narrow_wide_pkg.sv.bkp  floo_narrow_wide_pkg.sv.mesh  floo_narrow_wide_pkg.sv.r1e4  floo_narrow_wide_router.sv  floo_narrow_wide_router_cr.sv  floo_nw_chimney.sv  floo_nw_join.sv  floo_nw_router.sv  floo_nw_vc_chimney.sv  floo_offload_reduction.sv  floo_offload_reduction_buffer.sv  floo_offload_reduction_controller.sv  floo_offload_reduction_stalling.sv  floo_offload_reduction_taggen.sv  floo_output_arbeiter.sv  floo_output_arbiter.sv  floo_pkg.sv  floo_reduction_arbeiter.sv  floo_reduction_arbiter.sv  floo_reduction_sync.sv  (+18 more)
license/: index.html
pd/: Bender.yml
repository_structure/: index.html
scripts/: Makefile  build.sh  clean.sh  run.sh
src/: floo_axi_chimney.sv  floo_axi_flit_pkg.sv  floo_axi_pkg.sv  floo_meta_buffer.sv  floo_narrow_wide_chimney.sv  floo_narrow_wide_flit_pkg.sv  floo_narrow_wide_join.sv  floo_narrow_wide_pkg.sv  floo_narrow_wide_router.sv  floo_param_pkg.sv  floo_pkg.sv  floo_rob.sv  floo_rob_wrapper.sv  floo_route_select.sv  floo_router.sv  floo_wormhole_arbiter.sv
stylesheets/: extra.css
test/: axi_bw_monitor.sv  axi_reorder_compare.sv  floo_axi_rand_slave.sv  floo_dma_test_node.sv  floo_hbm_model.sv  floo_test_pkg.sv  tb_floo_axi_chimney.sv  tb_floo_axi_chimney.wave.tcl  tb_floo_dma_chimney.sv  tb_floo_dma_mesh.sv  tb_floo_dma_mesh.wave.tcl  tb_floo_dma_nw_chimney.sv  tb_floo_dma_nw_chimney.wave.tcl  tb_floo_narrow_wide_chimney.sv  tb_floo_narrow_wide_chimney.wave.tcl  tb_floo_rob.sv  tb_floo_rob.wave.tcl  tb_floo_router.sv  tb_floo_wide_only_chimney.sv  tb_floo_wide_only_chimney.wave.tcl
util/: axi_cfg.hjson  dma_experiments.sh  dma_experiments_analysis.py  dma_experiments_result_analysis.ipynb  flit_gen.py  floo_flit_pkg.sv.mako  floo_flit_pkg.sv.tpl  gen_jobs.py  gen_traffic.py  measurements.sh  narrow_wide_cfg.hjson  verible.waiver  visualize_traffic.py
(+138 files in other folders)
