# Copyright 2023 ETH Zurich and University of Bologna.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "floogen"
version = "0.1.0"
authors = [
  { name="Tim Fischer", email="fischeti@iis.ee.ethz.ch" },
]
description = "A Network Generator for FlooNoC"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pydantic == 2.5.3",
  "networkx == 3.2.1",
  "matplotlib == 3.8.2",
  "mako == 1.3.1",
  "ruamel.yaml == 0.18.5",
  "hjson == 3.1.0",
  "jsonref == 1.1.0",
  "click == 8.1.7",
  "pylint == 3.0.3",
  "pytest == 7.4.4",
  "pygame == 2.6.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/pulp-platform/FlooNoC"

[project.scripts]
floogen = "floogen.floo_gen:main"

[tool.setuptools]
packages = [
  "floogen",
  "floogen.model",
  "floogen.templates",
  "floogen.tests",
]

[tool.setuptools.package-data]
"floogen.templates" = ["*.mako"]

[tool.pytest.ini_options]
testpaths = ["floogen/tests"]

[tool.pylint.format]
max-line-length = 100
jobs = 4
suggestion-mode = 'yes'

[tool.pylint.disable]
disable = [
    "C0114",  # Missing module docstring
]

[tool.black]
line-length = 100
