# Copyright 2023 ETH Zurich and University of Bologna.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "floogen"
version = "0.6.1"
authors = [
  { name="Tim Fischer", email="fischeti@iis.ee.ethz.ch" },
]
description = "A Network Generator for FlooNoC"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pydantic",
  "networkx",
  "matplotlib",
  "mako",
  "ruamel.yaml",
  "hjson",
  "jsonref",
  "click",
  "pylint",
  "pytest",
  "pygame"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/pulp-platform/FlooNoC"

[project.scripts]
floogen = "floogen.cli:main"

[tool.setuptools]
packages = [
  "floogen",
  "floogen.model",
  "floogen.templates",
  "floogen.tests",
]

[tool.setuptools.package-data]
"floogen.templates" = ["*.mako"]

[tool.pytest.ini_options]
testpaths = ["floogen/tests"]

[tool.pylint.format]
max-line-length = 100
jobs = 4
suggestion-mode = 'yes'

[tool.pylint.disable]
disable = [
    "C0114",  # Missing module docstring
]

[tool.black]
line-length = 100
