# Copyright 2023 ETH Zurich and University of Bologna.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "floogen"
version = "0.7.0"
description = "A Network Generator for FlooNoC"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Tim Fischer", email = "fischeti@iis.ee.ethz.ch" }]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

dependencies = [
  "pydantic",
  "networkx",
  "matplotlib",
  "mako",
  "ruamel.yaml",
  "click",
  "pygame"
]

[project.urls]
Homepage = "https://github.com/pulp-platform/FlooNoC"

[project.scripts]
floogen = "floogen.cli:main"

[dependency-groups]
dev = ["pytest", "ruff", "pylint"]
viz = ["pygame"]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pillow",
  "cairosvg",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-git-committers-plugin-2",
  ]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "floogen"
module-root = ""
wheel-exclude = ["floogen/tests/**"]

[tool.pytest.ini_options]
testpaths = ["floogen/tests"]

[tool.pylint.format]
max-line-length = 100
jobs = 4
suggestion-mode = "yes"

[tool.ruff]
line-length = 100
